--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,14 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+div{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color:grey;
+  margin-top: 20px;
+  border-radius: 20%;
+  color: aliceblue;
+}
+
